--- a/piano.html
+++ b/piano.html
@@ -10,9 +10,9 @@
 	</head>
 
 	<body>
-		<h1 class="header">About Me</h1>
+		<h1 class="header">Game</h1>
 		<hr>
-				<div>
+			<div>
 			<ul class="menuUl">
 				<li class="menuLi">
 					<a class="active" href="index.html"><strong>Home</strong></a>
